# TennisApp-back

./: .env  .env.example  CLAUDE.md  Dockerfile  README.md  agenda-de-partidos.md  data-model.md  db.sqlite3  docker-compose.yml  docs_global_stats_frontend.md  implementacion-vista-estadisticas.md  implementacion-vista-marcador.md  implementacion-vista-partido.md  main.py  package-lock.json  primera_run.txt  pyproject.toml  requirements.txt  skills-lock.json
.atl/: .skill-registry.cache.json  skill-registry.md
.claude/agents/: django-api-architect.md  math-formula-expert.md  supabase-api-tester.md
.claude/docs/: api-contracts-front.md  api-endpoints.md  correcciones.md  fase3-coaching-flow.md  fase4-partidos-invitado.md  fase5-dashboard-entrenador.md  registro-diferenciado.md
apiusuario/: admin.py  apps.py  models.py  permissions.py  serializer.py  test_auth.py  tests.py  urls.py  views.py
back/: asgi.py  middleware.py  routing.py  settings.py  settings_test.py  urls.py  urls_test.py
coaching/: admin.py  models.py  serializers.py  urls.py  views.py
docs/: match-summary.md
fixtures/: seed_dev.json  seed_full.json
friendship/: models.py  serializer.py  urls.py  views.py
matchdata/: admin.py  apps.py  models.py  serializer.py  views.py
matches/: admin.py  models.py  serializer.py  services.py  urls.py  views.py
matches/tests/: test_services.py
notifications/: consumers.py  models.py  serializers.py  services.py  urls.py  views.py
players/: admin.py  apps.py  models.py  serializer.py  views.py
statistics/: calculators.py  tests.py  urls.py  views.py
(+43 files in other folders)
