[project]
name = "tennisapp-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.9.0",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
